<resources>
    <string name="app_name">RecipeHub</string>
    <string name="splash_image_description">App logo</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome!</string>
    <string name="app_logo">RecipeHub Logo</string>
    <string name="app_description">Your go-to app for discovering, sharing, and organizing delicious recipes!</string>
    <string name="home_fragment_text">Welcome to RecipeHub Home</string>
    <string name="recipes_fragment_text">Here will be the list of Recipes</string>
    <string name="recipe_detail_fragment_text">Recipe details will be displayed here</string>
    <string name="profile_fragment_text">User profile information</string>
    <string name="get_started">Get Started</string>
    <string name="recipe_image">Recipe image</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_thumbnail">Recipe Thumbnail</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="instructions">Instructions:</string>
    <string name="no_instructions_available">No instructions available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_description_2">Recipe Description</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="recipe_instruction">Recipe Instruction</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="favorite_icon">favorite icon</string>
    <string name="add_new_recipe">add new recipe</string>
    <string name="recipe_picture_url">Recipe Picture URL</string>
    <string name="add_instruction">Add Instruction</string>
    <string name="delete_icon">delete icon</string>
</resources>