<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/recipes_background">

<!--    <TextView-->
<!--        android:id="@+id/recipe_detail_text"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/recipe_detail_fragment_text"-->
<!--        android:gravity="center"-->
<!--        android:textSize="24sp"-->
<!--        android:layout_gravity="center"-->
<!--        />-->

    <ImageView
        android:id="@+id/recipeImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/recipe_image"
        android:textColor="@color/better_white"
        />

    <TextView
        android:id="@+id/recipeNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="16dp"
        android:text="@string/recipe_name" />

    <TextView
        android:id="@+id/recipeDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingTop="8dp"
        android:text="@string/recipe_description"
        android:textColor="@color/better_white"
        />
</LinearLayout>


